# soundEQ

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  ROADMAP.md  generate-icon.mjs  index.html  package-lock.json  package.json  run.bat  vite.config.ts
.github/workflows/: ci.yml
eq-apo/: Cargo.toml  register.ps1
eq-apo/src/: apo.rs  factory.rs  lib.rs
eq-audio/: Cargo.toml
eq-audio/src/: capture.rs  device.rs  error.rs  lib.rs  render.rs  session.rs  spectrum.rs  volume.rs
eq-core/: .gitignore  Cargo.toml  DECISIONS.md  README.md
eq-core/src/: biquad.rs  crossfeed.rs  filter_chain.rs  filter_type.rs  lib.rs  preset.rs  profile.rs
src/: App.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs  persistence.rs  startup.rs
src/components/: AppPanel.tsx  BandRow.tsx  EqCanvas.tsx  ProfilePanel.tsx  SessionPanel.tsx  SetupBanner.tsx
src/lib/: api.ts  colors.ts  useBandHistory.ts
